# Glassbox

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Curve Classifer Audit.md  Fast Path Architecture Audit.md  LICENSE  N-queen.txt  README.md  SECURITY.md  SKILL.md  algoritm.md  before and after.md  code_review_evolution.md  fast_path_summary.md  fix.md  limitations.md  plan.md  requirements.txt  setup_env.bat  summary  summary.md  test results.txt  todo  todo.md
.github/: pull_request_template.md
docs/: CPP_Migration_Roadmap.md  ONN_Architecture.md  README.md  Research_Roadmap.md  Universal_FastPath_AB_Report.md  Universal_FastPath_Roadmap.md  ai_handoff.yaml  implementation_plan.md  key_insights.md  onn_advanced_optimization.md  onn_comparative_audit.md  onn_runbook.md  onn_theoretical_framework.md  operation_nn_research.txt  research.md  research2.md  research3.md  sr_architectural_critique.md
glassbox/sr/cpp/: CMakeLists.txt  ast.h  core.cpp  eval.h  evolution.h  execution.h  export_pytorch.py  refine.h  setup.py  simplify.h
models/: adv_student_cnn.pt  adv_teacher_rnn.pt  curve_classifier.pt  curve_classifier_cnn.pt  curve_classifier_mlp.pt  curve_classifier_v2.pt  curve_classifier_v3.1.pt  curve_classifier_v3.2_calibrated.pt  curve_classifier_v3.pt  xgboost_classifier.pkl
research_notes/: README.md  onn_advanced_optimization.md  onn_comparative_audit.md  onn_theoretical_framework.md  sr_architectural_critique.md
scratch/: debug_p11.py  fast_path_new.py  fast_path_old.py  patch_funcs.py  test_joblib.py  test_proc_pool.py  test_torch_lstsq.py  (+2 more)
(+107 files in other folders)
